--- a/src/css/content.scss
+++ b/src/css/content.scss
@@ -3,6 +3,7 @@
   //padding: 10px;
   margin: 10px auto;
   border: 3px solid #fff;
+  min-width: 720px;
   .absolute-style{
     position: absolute;
     width: 100%;
@@ -48,6 +49,7 @@
       border: 3px solid black;
       border-top: none;
       border-right: none;
+      padding: 20px;
     }
   }
   .content-title-main{
@@ -76,5 +78,138 @@
       background-color: #909090;
     }
 
+  }
+  .main-con{
+    margin: 0 auto;
+    padding: 10px;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: #CCE8B5;
+    min-width: 620px;
+    .circle-style{
+      width: 50px;
+      height: 50px;
+      background-color: #444444;
+      border-radius: 50%;
+    }
+    .content-main{
+      margin: 0 10px;
+    }
+    .main-top-f16{
+      span{
+        font-size: 13px;
+        font-weight: 600;
+      }
+    }
+    .main-bottom-m10{
+      position: relative;
+      margin-top: 10px;
+      max-width: 500px;
+      .span-under{
+        text-decoration: underline;
+        cursor: pointer;
+      }
+    }
+    //.close-style{
+    //  display: inline-block;
+    //  width: 10px;
+    //  height:2px;
+    //  background: black;
+    //  line-height: 0;
+    //  font-size:0;
+    //  vertical-align: middle;
+    //  -webkit-transform: rotate(45deg);
+    //  &::after{
+    //    content:'/';
+    //    display:block;
+    //    width: 10px;
+    //    height:2px;
+    //    background: black;
+    //    -webkit-transform: rotate(-90deg);}
+    //}
+    .output{
+      position: relative;
+      display: inline-block;
+      margin-right: 30px;
+      margin-bottom: 15px;
+    }
+    .close {
+      /* still bad on picking color */
+      //background: orange;
+      color: #909090;
+      /* make a round button */
+      //border: 1xp solid #dddddd;
+      //border-radius: 5px;
+      /* center text */
+      line-height: 10px;
+      text-align: center;
+      height: 10px;
+      width: 10px;
+      font-size: 10px;
+      padding: 1px;
+    }
+    /* use cross as close button */
+    .close::before {
+      content: "\2716";
+      border: 1px solid #909090;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    /* place the button on top-right */
+    .close {
+      //top: -10px;
+      //right: -10px;
+      position: absolute;
+
+    }
+    .inner-content{
+      position: absolute;
+      top: 50px;
+      padding: 10px;
+      left: -35px;
+      width: 450px;
+      height: 80px;
+      border: 2px solid #715D1F;
+      border-radius: 5px;
+      background: #E0EDD4;
+      &::after{
+        content: "";
+        top: -57px;
+        left: 35px;
+        width:0;
+        height:0;
+        border-width:30px;
+        border-style:solid;
+        border-color:transparent transparent #E0EDD4;/*透明 透明  灰*/
+        position:absolute;
+      }
+      .input-wrap{
+        margin: 10px 0;
+      }
+      .input-primary{
+        outline: none;
+        padding: 5px;
+        width: 400px;
+        border: 1px solid #dddddd;
+        &:focus{
+          border: 1px solid #715D1F;
+        }
+      }
+      .btn{
+        margin-right: 20px;
+        padding: 5px;
+
+      }
+    }
+    .triangle{
+      top: -60px;
+      left: 35px;
+      width:0;
+      height:0;
+      border-width:30px;
+      border-style:solid;
+      border-color:transparent transparent #715D1F;/*透明 透明  灰*/
+      position:absolute;
+    }
   }
 }
